--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/vue-fontawesome": "^2.0.2",
+    "animate.css": "^4.1.1",
     "bootstrap": "^5.0.2",
     "bootstrap-vue": "^2.21.2",
     "vue": "^2.5.11"
