--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "animate.css": "^4.1.1",
     "bootstrap": "^5.0.2",
     "bootstrap-vue": "^2.21.2",
-    "vue": "^2.5.11"
+    "vue": "^2.5.11",
+    "vuex": "^3.6.2"
   },
   "browserslist": [
     "> 1%",
