--- a/.babelrc
+++ b/.babelrc
@@ -2,5 +2,7 @@
   "presets": [
     ["env", { "modules": false }],
     "stage-3"
-  ]
+  ],
+  "plugins": [["transform-runtime", { "polyfill": false, "regenerator": true }]]
+  // "plugins": ["transform-regenerator"]
 }
