--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "bootstrap": "^5.0.2",
     "bootstrap-vue": "^2.21.2",
     "vue": "^2.5.11",
+    "vue-router": "^3.5.3",
     "vuex": "^3.6.2"
   },
   "browserslist": [
